Fixed aboutMeHeaderBox spacing

--- a/css/index.css
+++ b/css/index.css
@@ -86,6 +86,12 @@
     margin: 2.5%;
 }
 
+#aboutMeHeaderBox {
+
+    margin-top: auto;
+    margin-bottom: auto;
+}
+
 #aboutMeBodyBox {
 
     margin-left: auto;
